--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,2 +1,4 @@
-h1 Home#index
-p Find me in app/views/home/index.html.slim
+h1 Welcome to
+    em YAMS
+    - Yet Another Management System
+=link_to('Manage Here','/manage')
