--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,4 +1,2 @@
-h1 Welcome to
-    em YAMS
-    - Yet Another Management System
+h1 Welcome to YAMS - Yet Another Management System
 =link_to('Manage Here','/manage')
